--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
-
   "repository": {
     "type": "git",
     "url": "git+https://github.com/hoskyfull/Danceinf.git"
@@ -20,8 +19,11 @@
   },
   "homepage": "https://github.com/hoskyfull/Danceinf#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongo": "^4.6.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "liquid-express-views": "^1.0.8",
     "method-override": "^3.0.0",
     "mongoose": "^6.3.6",
